fix the flat list layout to flex wrap

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .main {
   flex-basis: 60%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .map {
